fix bug that causes straight lines to be drawn between strokes on mobile

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -52,6 +52,7 @@ body {
 }
 
 .canvas {
+  touch-action: none;
   aspect-ratio: 1;
   width: 720px;
   image-rendering: pixelated;
